Animatie aan slide meer leads toegevoegd

--- a/_includes/focus.html
+++ b/_includes/focus.html
@@ -4,7 +4,7 @@
                 <div class="row story-width">
                     <div class="col-12 text-center">
                         <div class="jumbotron">
-                            <h1 class="blur" data-2400="color:transparent; text-shadow: 0 0 75px #fff" data-3000="color:#fff; text-shadow: 0 0 0px #fff;">Focus</h1>
+                            <h1 class="blur" data-2400="color:transparent; text-shadow: 0 0 75px #fff" data-3000="color:#fff; text-shadow: 0 0 0px #fff;"><span>Focus</span></h1>
                             <h2 data-2400="opacity:0; transform: translate(0,90px);" data-3000="opacity:1; transform: translate(0,0);">"The trick isn't adding stuff. It's taking away."</h2>
                               <small data-2400="opacity:0; transform: translate(0,90px)" data-3000="opacity:1; transform: translate(0,0px)"><i class="icon-comment-alt"></i> Mark Zuckerberg</small>
                               <img src="{{ site.url }}/img/facebook.jpg" class="img-circle" data-2400="transform[bounce]: scale(0); opacity:0" data-3000="transform: scale(1); opacity: 1;">
@@ -31,19 +31,14 @@
         <div class="flexslider" id="voordelen">
             <ul class="slides">
                 <li class="leads active-slide" id="bekijks">
-                    <div class="apple-menu">
-                        <p><i class="icon-apple float-left"></i>
-                        Coast
-                        <i class="icon-dropbox"></i>
-                        <i class="icon-volume-up"></i>
-                        <i class="icon-signal"></i>
-                        do 14:14
-                        <i class="icon-search"></i></p>
-                    </div>
+                    <div class="overlay meerleads"></div>
+                    <div class="overlay mailone"></div>
+                    <div class="overlay mailtwo"></div>
+                    <div class="overlay mailthree"></div>
                     <div class="container">
                         <div class="vert-center">
-                            <div class="row text-center text-box">
-                                <div class="col-6 col-offset-6">
+                            <div class="row text-box">
+                                <div class="col-5">
                                     <h1>Meer Leads</h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
                                    <p>Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
