Menu scroll update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,10 @@
 
           skrollr.menu.init(s,{
             animate: true, //skrollr will smoothly animate to the new position using `animateTo`.
-            duration: 2500, //How long the animation should take in ms.
+            duration: function(currentTop, targetTop) {
+              return Math.abs(currentTop - targetTop) * 0.5;
+            },
+
           });
           </script>
         
