--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -15,9 +15,9 @@
 			<i class="icon-reorder"></i>
 		</a>
 	</div>
-	<div class="nav-side" id="slide-nav">
-		<h3>Gouwestad sites</h3>
-		<ul class="nav nav-pills nav-stacked">
+	<div class="nav-side text-center" id="slide-nav">
+		<img src="{{ site.url }}/img/logo.png">
+		<ul class="nav nav-pills nav-stacked text-left">
 		    <li><a href="#" class="menu-link"><i class="icon-thumbs-up"></i>  Een nieuw soort <strong>website</strong></a></li>
 		    <li><a href="#" class="menu-link"><i class="icon-compass"></i> Gericht op <strong>resultaat</strong></a></li>
 		    <li><a href="#design" data-menu-top="6000" class="menu-link"><i class="icon-pencil"></i> Handgemaakt <strong>design</strong></a></li>
