Meer verkopen slide

--- a/_includes/focus.html
+++ b/_includes/focus.html
@@ -47,14 +47,17 @@
                         </div>
                     </div>
                 </li>
-                <li class="verkopen">
+                <li class="verkopen active-slide">
+                    <div class="overlay boxone"></div>
+                    <div class="overlay boxtwo"></div>
+                    <div class="overlay meerverkopen"></div>
                     <div class="container">
                         <div class="vert-center">
                             <div class="row text-center text-box">
                                 <div class="col-4 col-offset-8">
-                                    <h1><small>meer</small> <span>verkopen</span></h1>
+                                    <h1>Meer Verkopen</h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>People don’t just hand over their information to anyone. A reputable site, a delightful submission process and a compelling visual narrative will drive more leads for you.
+                                   <p>Een goed verhaal is de basis voor een verkoop, dit geanimeerd en stijlvol vormgegeven draagt direct bij aan meer verkopen of inschrijvingen. Het draait allemaal om user experience.</p> 
                                    </p>
                                 </div>
                             </div>
