--- a/_includes/focus.html
+++ b/_includes/focus.html
@@ -41,7 +41,7 @@
                                 <div class="col-5">
                                     <h1>Meer Leads</h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
+                                   <p>Bezoekers laten niet snel contact gegevens achter, een goed design en concrete content geven het vertrouwen wat de bezoeker verwacht.</p>
                                 </div>
                             </div>
                         </div>
@@ -76,8 +76,7 @@
                                         <h1><img class="img-circle" src="http://progroep.github.io/Sharebiz/img/hans-ouwerkerk.jpg"> <small>meer</small> <span>volgers</span></h1>
                                     </div>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p class="lead">Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
-                                   <p>Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
+                                   <p class="lead">Een betrouwbaar en sterk merk wat wordt neergezet door goede content en een superstrak design zorgen er voor dat bezoekers ook een kijkje nemen op je social media en je hier volgen.</p>
                                    <h5>
                                        <span class="icon-stack">
                                           <i class="icon-check-empty icon-stack-base"></i>
@@ -108,7 +107,7 @@
                                 <div class="col-6 col-offset-6">
                                     <h1>Meer bekijks</h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
+                                   <p>Een unieke site wordt sneller gedeeld op social media, met vrienden en familie of op het werk. Dit resulteerd in meer traffic en dus meer potentiële klanten.</p>
                                 </div>
                             </div>
                         </div>
@@ -121,7 +120,7 @@
                                 <div class="col-6">
                                     <h1>Meer downloads</h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
+                                   <p>Het begeleiden van de bezoekers naar een sterke call-to-action op de site zorgt er voor dat je product, productinformatie of white-paper vaker wordt gedownload.</p>
                                 </div>
                             </div>
                         </div>
@@ -134,7 +133,7 @@
                                 <div class="col-6 col-offset-6">
                                     <h1>Meer signups</h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
+                                   <p>Een betrouwbare en goed opgebouwde website zorgt voor een snellere groei van een email database.</p>
                                 </div>
                             </div>
                         </div>
