--- a/_includes/focus.html
+++ b/_includes/focus.html
@@ -1,33 +1,44 @@
-<section class="focus" id="focus" data-2000="top:100%;" data-2002="top:0%;" data-3200="top: 0%;" data-3800="top: -100%">
+<section class="focus" id="focus" data-2000="top:100%;" data-2002="top:0%;" data-3500="left:0%;" data-4000="left: -100%;" data-4200="top: 0%;" data-4800="top: -100%">
         <div class="container">
             <div class="vert-center">
                 <div class="row story-width">
                     <div class="col-12 text-center">
                         <div class="jumbotron">
-                            <h1 class="blur" data-2400="color:transparent; text-shadow: 0 0 75px #fff" data-3000="color:#fff; text-shadow: 0 0 0px #fff;"><span>Focus</span></h1>
-                            <h2 data-2400="opacity:0; transform: translate(0,90px);" data-3000="opacity:1; transform: translate(0,0);">"The trick isn't adding stuff. It's taking away."</h2>
-                              <small data-2400="opacity:0; transform: translate(0,90px)" data-3000="opacity:1; transform: translate(0,0px)"><i class="icon-comment-alt"></i> Mark Zuckerberg</small>
-                              <img src="{{ site.url }}/img/facebook.jpg" class="img-circle" data-2400="transform[bounce]: scale(0); opacity:0" data-3000="transform: scale(1); opacity: 1;">
+                                <div >
+                                    <h1 class="blur" data-2400="color:transparent; text-shadow: 0 0 75px #fff" data-3000="color:#fff; text-shadow: 0 0 0px #fff;"><span>Focus</span></h1>
+                                    <h2 data-2400="opacity:0; transform: translate(0,90px);" data-3000="opacity:1; transform: translate(0,0);">"The trick isn't adding stuff. It's taking away."</h2>
+                                      <small data-2400="opacity:0; transform: translate(0,90px)" data-3000="opacity:1; transform: translate(0,0px)"><i class="icon-comment-alt"></i> Mark Zuckerberg</small>
+                                      <img src="{{ site.url }}/img/facebook.jpg" class="img-circle" data-2400="transform[bounce]: scale(0); opacity:0" data-3000="transform: scale(1); opacity: 1;">
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section class="focus" data-3400="left:100%;" data-4000="left: 0%;" data-4200="top: 0%;" data-4800="top: -100%">
+        <div class="container">
+            <div class="vert-center">
+                <div class="row">
+                    <div class="col-6">
+                    <h1>Focus</h1>
+                       <p>Daar geloven wij in. Er zijn ontzettend veel websites te vinden waarbij je amper kunt vinden wat je zoekt tussen de ongelooflijke hoeveelheid overbodige content en randinformatie. Er zijn nog steeds ontzettend veel mensen die denken dat je daardoor betere Google rankings behaalt. Yeah wright...</p>
+
+                        <p>Coast gelooft in focus. Waarom moeten surfers kopen wat jij verkoopt en hoe kunnen ze dat het snelste doen...</p>
+                        <h4>Dat is waar het om gaat toch?</h4>
+                        <a href="#" class="btn btn-large">COAST is doelgericht</a>
+
+                    </div>
+                    <div class="col-6 tablet-background">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="focus-content">
-        <div class="container">
-            <div class="row story-width">
-                <div class="col-12 text-center">
-                    <p><strong>Wat wil jij met je website bereiken? Denk je daar wel eens over na?</strong><br>
-                    Websites zijn tegenwoordig voor heel veel bedrijven het belangrijkste communicatiemiddel, maar gek genoeg ook het middel waar het minste aandacht voor is. Vreemd, want het eerste wat mensen zullen doen als ze van je product horen is het Googelen... En? Worden ze enthousiast wanneer ze op je website komen?  Of gaat die website eigenlijk helemaal niet over het product? Een gemiste kans.
-                    Coast is gefocust op resultaat. Dat betekent dat het product het middelpunt is en alles aan het ontwerp gericht is op conversie. Dus geen onnodige informatie (echt, het helpt je niet in Google), geen nieuwsberichten (wie leest die in godsnaam?), maar het verhaal waar de bezoeker naar op zoek is.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <section class="focus-blocks"  data-3200="top: 100%;" data-3800="top: 0%" data-4000="top: 0%;" data-4400="top:-100%;">
+
+    <section class="focus-blocks"  data-4200="top: 100%;" data-4800="top: 0%" data-5000="top: 0%;" data-5400="top:-100%;">
         <div class="flexslider" id="voordelen">
             <ul class="slides">
                 <li class="leads active-slide" id="bekijks">
@@ -39,9 +50,9 @@
                         <div class="vert-center">
                             <div class="row text-box">
                                 <div class="col-5">
-                                    <h1>Meer Leads</h1>
+                                    <h1>meer <span>leads</span></h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Bezoekers laten niet snel contact gegevens achter, een goed design en concrete content geven het vertrouwen wat de bezoeker verwacht.</p>
+                                   <p>Website bezoekers laten niet zomaar hun contactgegevens achter. Een professionele website met een eenvoudig aanmeldproces zal direct meer leads opleveren.</p>
                                 </div>
                             </div>
                         </div>
@@ -57,7 +68,7 @@
                                 <div class="col-4 col-offset-8">
                                     <h1>Meer Verkopen</h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Een goed verhaal is de basis voor een verkoop, dit geanimeerd en stijlvol vormgegeven draagt direct bij aan meer verkopen of inschrijvingen. Het draait allemaal om user experience.</p> 
+                                   <p>User experience, daar draait het allemaal om. Dat betekent niet alleen aandacht voor eenvoudige bediening, maar ook voor het vertellen van een geanimeerd verhaal dat bezoekers tot actie aan zet.</p> 
                                    </p>
                                 </div>
                             </div>
