--- a/_includes/resultaten.html
+++ b/_includes/resultaten.html
@@ -1,62 +1,48 @@
 
     
-    <section class="resultaten" data-7800="left:100%;" data-8400="left:0%" data-8600="top:0%" data-9600="top:-200%;">
+    <section class="resultaten" data-8800="left:100%;" data-9400="left:0%" data-9600="top:0%" data-10600="top:-200%;">
+        <div class="container analytics">
+            <div class="row story-width">
+                <div class="macbook">
+                    <img src="{{ site.url }}/img/macbook.png">
+                    <svg version="1.1" id="MacBook_Pro_xA0_Image_1_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                         x="0px" y="0px" viewBox="0 0 2500 1500" style="enable-background:new 0 0 2500 1500;"
+                         xml:space="preserve">
+                    <polyline style="fill:none;stroke:#008BC9;stroke-width:4; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-400-top="stroke-dashoffset:2000;" data--200-top="stroke-dashoffset:0;" points="723,551 819,563 918,563 1017.5,551 
+                        1116.5,539 1215.5,531 1314.5,574 1414,558 1513,531 1612,531 1711,531 1810.5,503 1909.5,482 "/>
+                    <circle style="fill:#008BC9;" data-800-top="opacity:0; transform: scale(1);" data-790-top="opacity: 1;"
+                     cx="819.5" cy="563.306" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-745-top="opacity:0; transform: scale(1);" data-735-top="opacity: 1;"
+                    cx="918.558" cy="563.306" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-690-top="opacity:0; transform: scale(1);" data-680-top="opacity: 1;"
+                    cx="1215.658" cy="531.495" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-635-top="opacity:0; transform: scale(1);" data-625-top="opacity: 1;"
+                    cx="1114.5" cy="538.676" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-580-top="opacity:0; transform: scale(1);" data-570-top="opacity: 1;"
+                    cx="1015.5" cy="551.306" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-525-top="opacity:0; transform: scale(1);" data-515-top="opacity: 1;"
+                    cx="1316.25" cy="574" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-470-top="opacity:0; transform: scale(1);" data-460-top="opacity: 1;"
+                    cx="1412.898" cy="558.806" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-415-top="opacity:0; transform: scale(1);" data-405-top="opacity: 1;"
+                    cx="1512.398" cy="531.495" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-360-top="opacity:0; transform: scale(1);" data-350-top="opacity: 1;"
+                    cx="1610.112" cy="531.495" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-305-top="opacity:0; transform: scale(1);" data-300-top="opacity: 1;"
+                    cx="1710.398" cy="531.495" r="4.5"/>
+                    <circle style="fill:#008BC9;" data-250-top="opacity:0; transform: scale(1);" data-240-top="opacity: 1;"
+                    cx="1808.898" cy="503.333" r="4.5"/>
+                    </svg>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="row story-width">
                 <div class="col-12 text-center">
-                    <h1>Resultaat</h1>
-                    <h2>What gets measured gets managed</h2>
-                      <small><i class="icon-comment-alt"></i> Peter Drucker <a href="www.facebook.com">Facebook CEO</a></small>
-                    <p>Je wilt iets bereiken. En dat betekent dat je ook moet weten hoe je website presteert wij bieden je standaard inzicht in wat er op je website gebeurt en de eerste dertig dagen houden we nauwlettend in de gaten of er nog zaken verbeterd kunnen worden om nog meer uit je website te halen.</p>
-                </div>
-            </div>
-        </div>
-        <div class="container analytics">
-            <div class="macbook">
-                <img src="{{ site.url }}/img/macbook.png">
-                <svg version="1.1" id="MacBook_Pro_xA0_Image_1_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                     x="0px" y="0px" viewBox="0 0 2500 1500" style="enable-background:new 0 0 2500 1500;"
-                     xml:space="preserve">
-                <polyline style="fill:none;stroke:#008BC9;stroke-width:4; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-400-top="stroke-dashoffset:2000;" data--200-top="stroke-dashoffset:0;" points="723,551 819,563 918,563 1017.5,551 
-                    1116.5,539 1215.5,531 1314.5,574 1414,558 1513,531 1612,531 1711,531 1810.5,503 1909.5,482 "/>
-                <circle style="fill:#008BC9;" data-800-top="opacity:0; transform: scale(1);" data-790-top="opacity: 1;"
-                 cx="819.5" cy="563.306" r="4.5"/>
-                <circle style="fill:#008BC9;" data-745-top="opacity:0; transform: scale(1);" data-735-top="opacity: 1;"
-                cx="918.558" cy="563.306" r="4.5"/>
-                <circle style="fill:#008BC9;" data-690-top="opacity:0; transform: scale(1);" data-680-top="opacity: 1;"
-                cx="1215.658" cy="531.495" r="4.5"/>
-                <circle style="fill:#008BC9;" data-635-top="opacity:0; transform: scale(1);" data-625-top="opacity: 1;"
-                cx="1114.5" cy="538.676" r="4.5"/>
-                <circle style="fill:#008BC9;" data-580-top="opacity:0; transform: scale(1);" data-570-top="opacity: 1;"
-                cx="1015.5" cy="551.306" r="4.5"/>
-                <circle style="fill:#008BC9;" data-525-top="opacity:0; transform: scale(1);" data-515-top="opacity: 1;"
-                cx="1316.25" cy="574" r="4.5"/>
-                <circle style="fill:#008BC9;" data-470-top="opacity:0; transform: scale(1);" data-460-top="opacity: 1;"
-                cx="1412.898" cy="558.806" r="4.5"/>
-                <circle style="fill:#008BC9;" data-415-top="opacity:0; transform: scale(1);" data-405-top="opacity: 1;"
-                cx="1512.398" cy="531.495" r="4.5"/>
-                <circle style="fill:#008BC9;" data-360-top="opacity:0; transform: scale(1);" data-350-top="opacity: 1;"
-                cx="1610.112" cy="531.495" r="4.5"/>
-                <circle style="fill:#008BC9;" data-305-top="opacity:0; transform: scale(1);" data-300-top="opacity: 1;"
-                cx="1710.398" cy="531.495" r="4.5"/>
-                <circle style="fill:#008BC9;" data-250-top="opacity:0; transform: scale(1);" data-240-top="opacity: 1;"
-                cx="1808.898" cy="503.333" r="4.5"/>
-                </svg>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    Voor de echte data of statistiek freak bieden we ook de mogelijkheid om nog verder op het bezoekersgedrag in te zoomen met de volgende tools.
-                </div>
-                <div class="col-4">
-                    Heatmaps
-                </div>
-                <div class="col-4">
-                    Qualaroo
-                </div>
-                <div class="col-4">
-                    Optimizely
+                    <h1 class="text-center">Resultaten</h1>
+                    <p>In ons snel veranderende digitale tijdperk wil je natuurlijk weten of je surfers inderdaad van je Coast website genieten. Gaan ze tot actie over, of zijn ze geneigd je website toch weer snel te verlaten? Natuurlijk bevat je Coast websites de tools om dit tot op het kleinste detail te volgen.
+
+                    Bovendien houden we dit de eerste 30 dagen na de launch voor je in de gaten, geven waar nodig advies en brengen waar nodig verbeteringen aan. Wij willen dat je met je Coast website ook daadwerkelijk iets bereikt.</p>
                 </div>
             </div>
         </div>
