--- a/_includes/design.html
+++ b/_includes/design.html
@@ -1,16 +1,8 @@
 
-   <section class="design" id="design" data-5000="top: 200%;" data-5400="top: 0%" data-6800="top:0%;" data-7800="top:-100%">
-         <video id="example_video_1" class="full-video visible-lg" data-5000="opacity:0;" data-5800="opacity:1;"
-            poster="{{ site.url/img/beach.jpg}}"
-            data-setup='{"autoplay": true, "controls": false, "loop": true}'>
-              <source src="http://gouwestad.com/lex/basis/_site/img/coast.mp4" type='video/mp4' />
-              <source src="http://gouwestad.com/lex/basis/_site/img/coast.webm" type='video/webm' />
-              <source src="http://gouwestad.com/lex/basis/_site/img/coast.ogv" type='video/ogg' />
-        </video>
-        <div class="move">
-        <div class="container">
-            <div class="row story-width text-center">
-                <div class="col-12">
+   <section class="design" id="design" data-5000="top: 200%;" data-5400="top: 0%" data-9000="top:0%;" data-9800="top:-100%">
+        <div class="container" data-6000="top:0%;" data-6800="top:-100%;">
+            <div class="row text-center">
+                <div class="col-md-8">
                     <svg version="1.1"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" x="0px" y="0px" viewBox="0 0 1661.917 663.033" style="enable-background:new 0 0 1661.917 663.033;" xml:space="" data-4800="transform[swing]: scale(1.5);" data-5400="transform: scale(1);"
                          >
@@ -45,8 +37,8 @@
                     </svg>
                 </div>
             </div>
-            <div class="row story-width">
-                <div class="col-12">
+            <div class="row">
+                <div class="col-md-8">
                     <h2 data-5600="opacity:0; transform: translate(0,90px);" data-5900="opacity:1; transform: translate(0,0);">is not just what it looks like & feels like. Design is how it works</h2>
                     <div class="text-right">
                         <img src="{{ site.url }}/img/stevejobs.jpg" class="img-circle" data-5600="transform[bounce]: scale(0); opacity:0" data-5900="transform: scale(1); opacity: 1;">
@@ -55,14 +47,13 @@
                 </div>
             </div>
         </div>
-    </div>
-    </section>
 
-    <section class="design-story" data-6800="top:100%;" data-7800="top:0%">
+    <div class="design-story" data-6800="top:100%;" data-7800="top:0%">
+        <div class="overlay"></div>
         <div class="container">
             <div class="vert-center">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-md-4 col-md-offset-8">
                         <p>Wij geloven dat een ontwerp niet los van een verhaal kan worden gezien. Het ontwerp moet het verhaal versterken en daarom geloven wij niet in standaard templates. Wij geloven in design dat je verhaal verteld, niet alleen in woord, maar ook in beeld en vooral in gevoel.
 
                         Om je verhaal altijd goed over te laten komen is het natuurlijk belangrijk dat bezoekers er op alle apparaten van kunnen genieten. Doordat Coast websites responsive zijn werken ze goed op alle apparaten, van mobiel tot 27 inch beeldscherm, maar nog belangrijker is dat Coast er op alle apparaten fantastisch uitziet. Een fantastische beleving, waar je ook mee surft.
@@ -71,5 +62,6 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
